Interim changes since ChronoChat-js v0.3 (2016-03-20)
-----------------------------------------------------

Changes
* Update to use crypto.subtle Data packet signing.

ChronoChat-js v0.3 (2015-08-08)
-----------------------------------------------------

Changes
* http://redmine.named-data.net/issues/3021 Updated to use ChronoSync2013 in NDN-JS.
  It now works with NFD. Removed the local files to implement ChronoSync.

ChronoChat-js v0.2 (2014-04-07)
-------------------------------

Changes
* Upgrade to ndn-js v0.3 with the TLV wire format.


ChronoChat-js v0.1 (2013-08-13)
-------------------------------

This is the initial release, using ndn-js with the Binary XML wire format.