@@ -33,7 +33,7 @@ button
     border-width:2px;
     border-radius:10px;
     width:550px;
-    height:300px;
+    height:320px;
     font-family: 'Autour One', cursive;
 }
 #name
